<resources>
    <string name="app_name">Bulls and Cows</string>
    <string name="buttonTraining">Тренировка</string>
    <string name="trainingDescr">Кнопка режима тренировки</string>
    <string name="pvpButton">Кнопка режима 2х игроков</string>
    <string name="rulesButtonDescr">Кнопка вызова правил</string>
    <string name="rules">Игра рассчитана на двух игроков. Каждый загадывает комбинацию из четырех цифр, но так чтобы все цифры числа были разные. Цель — отгадать число загаданное соперником.
        \n
        \nКаждый раунд, по очереди, игроки называют предпологаемые комбинации из четырех различных чисел. Если цифра из названного числа есть в числе соперника, то эта ситуация называется корова. Если цифра из названного числа есть в отгадываемом числе и стоит в том же месте, то эта ситуация называется бык. Например, первый игрок задумал 6109, а второй игрок назвал 0123. То первый игрок должен сказать: один бык и одна корова (1б,1к).
        \n
        \nВыбор игрока, который походит первым определяется случайной жеребьевкой. Если игрок ходивший первым угадал число соперника, у того остается одна попытка, чтобы угадать число данного игрока. В случае успеха игра завершается ничьей. Если же игрок ходивший вторым угадал число соперника раньше, ему присуждается победа.
        \n
        \nТак же в данной игре можно проверить свои силы в режиме ТРЕНИРОВКА. Тут игроку предстоит угадать случайно сгенерированный набор цифр по тем же правилам.</string>
    <string name="numberButton">Кнопка ввода цифры</string>
    <string name="warningHighPosition">Набор должен состоять из 4х цифр</string>
    <string name="differentNumbers">Цифры не должны повторяться</string>
    <string name="trainingWelcome">Сгенерируйте первую комбинацию</string>
    <string name="name1">Введите имя первого игрока</string>
    <string name="name2">Введите имя второго игрока</string>
    <string name="message1">Введите имя первого игрока и его число</string>
    <string name="message2">Введите имя второго игрока и его число</string>
    <string name="difNames">Имена игроков не должны совпадать</string>
    <string name="draw">Ничья</string>
    <string name="lastTurn">Последний ход</string>
</resources>